fix: spacing bug on CTAs at smaller screen sizes to no longer stick to the edges

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,6 +319,10 @@ h3 ~ p {
         margin-bottom: 1rem;
     }
 
+    #cta-section {
+        max-width: 80%;
+    }
+
     #navigation-links {
         position: relative;
         left: 40%;
